# physics-playground

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: runner.h
src/core/: vector2d.h
src/render/: sfml_render.cpp  sfml_render.h
src/simulations/: collision.cpp  collision.h  gravitation.cpp  gravitation.h  mru.cpp  mru.h  mruv.cpp  mruv.h  pendulum.cpp  pendulum.h  projectile.cpp  projectile.h  spring.cpp  spring.h
src/ui/: menu.cpp
